feat: lightning app, apple check order
